# machinecode

./: .gitignore  Cargo.toml  Makefile  README.md
jitrun/: Cargo.toml
jitrun/src/: main.rs
src/: lib.rs
